# Megatron3000

./: CMakeLists.txt  README.md  inserRegistro.txt  insert.txt
archivos/: titanic.csv
bloques/: 1bloque1.txt  1bloque2.txt  1bloque3.txt  1bloque4.txt  1bloque5.txt  1bloque6.txt  1bloque7.txt  1bloque8.txt  blosquesAsignados.txt  mapaBloque.txt
disk/plato1/superficie1/pista1/: sector1.txt  sector2.txt
disk/plato1/superficie1/pista2/: sector2.txt
disk/plato1/superficie2/pista1/: sector1.txt
esquema/: esquema.txt
metaData/: bloque1.txt  bloque10.txt  bloque11.txt  bloque12.txt  bloque13.txt  bloque14.txt  bloque15.txt  bloque16.txt  bloque17.txt  bloque18.txt  bloque19.txt  bloque2.txt  bloque20.txt  bloque21.txt  bloque22.txt  bloque23.txt  bloque24.txt  bloque25.txt  bloque26.txt  bloque27.txt  bloque28.txt  bloque29.txt  bloque3.txt  bloque30.txt  bloque31.txt  bloque32.txt  bloque33.txt  bloque34.txt  bloque35.txt  bloque36.txt  bloque37.txt  bloque38.txt  bloque39.txt  bloque4.txt  bloque40.txt  bloque41.txt  bloque42.txt  bloque43.txt  bloque44.txt  bloque45.txt  (+26 more)
src/: CMakeLists.txt  main.cpp
src/control/: control.cpp
src/include/control/: control.h
src/include/query/: archivo.h  esquema.h  query.h
src/include/storage/: bloque.h  disk.h  headFile.h
src/query/: archivo.cpp  esquema.cpp  query.cpp
src/storage/: bloque.cpp  disk.cpp  headFile.cpp
